styles: fixed z-index

--- a/src/components/lessonDragList/lessonDragList.styles.scss
+++ b/src/components/lessonDragList/lessonDragList.styles.scss
@@ -92,7 +92,7 @@
                     left: 0;
 
                     background-color: white;
-                    z-index: 2;
+                    z-index: 3;
 
                     &::after {
                         display: flex;
